--- a/index.html
+++ b/index.html
@@ -1,71 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>アルバイト募集一覧</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background: #f6f6f6;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .job-list {
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .job {
-            border-bottom: 1px solid #ddd;
-            padding: 15px 0;
-        }
-        .job:last-child {
-            border-bottom: none;
-        }
-        .title {
-            font-size: 20px;
-            font-weight: bold;
-            color: #333;
-        }
-        .detail {
-            margin-top: 5px;
-            color: #555;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>募集一覧</title>
 </head>
 <body>
+  <h1>募集一覧</h1>
 
-    <h1>アルバイト募集一覧</h1>
+  <div>
+    <h2>アルバイト募集 A</h2>
+    <p>内容：イベントスタッフ</p>
+    <a href="apply.html">
+      <button>応募する</button>
+    </a>
+  </div>
 
-    <div class="job-list">
-        <div class="job">
-            <div class="title">コンビニスタッフ</div>
-            <div class="detail">時給：1100円〜</div>
-            <div class="detail">勤務地：浜松市中区</div>
-            <div class="detail">シフト：週3〜OK</div>
-        </div>
-
-        <div class="job">
-            <div class="title">倉庫内ピッキング作業</div>
-            <div class="detail">時給：1200円〜</div>
-            <div class="detail">勤務地：浜松市東区</div>
-            <div class="detail">時間帯：9:00〜17:00</div>
-        </div>
-
-        <div class="job">
-            <div class="title">カフェ店員</div>
-            <div class="detail">時給：1050円〜</div>
-            <div class="detail">勤務地：浜松市西区</div>
-            <div class="detail">シフト：早朝歓迎</div>
-        </div>
-    </div>
+  <div>
+    <h2>アルバイト募集 B</h2>
+    <p>内容：軽作業スタッフ</p>
+    <a href="apply.html">
+      <button>応募する</button>
+    </a>
+  </div>
 
 </body>
 </html>
