--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>募集一覧</title>
 <style>
   body { font-family: Arial, sans-serif; padding: 20px; }
+  h2 { margin-bottom: 20px; }
   .job-box {
     border: 1px solid #ccc;
     padding: 15px;
@@ -25,31 +26,30 @@
 
 <h2>募集一覧</h2>
 
-<!-- ▼▼ ここから求人１つ ▼▼ -->
+<!-- ▼▼ 求人１ ▼▼ -->
 <div class="job-box">
   <p><strong>現場名：</strong>〇〇イベント会場</p>
   <p><strong>内容：</strong>会場設営・撤去</p>
   <p><strong>勤務地：</strong>東京都渋谷区</p>
   <p><strong>時間：</strong>9:00〜18:00</p>
 
-  <a class="apply-btn" href="apply.html">応募する</a>
+  <a class="apply-btn" href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sharing" target="_blank">応募する</a>
 </div>
-<!-- ▲▲ 求人１つ ▲▲ -->
+<!-- ▲▲ 求人１ ▲▲ -->
 
-
-<!-- ▼▼ 求人を増やしたいときは、この箱をコピペして増やせる ▼▼ -->
+<!-- ▼▼ 求人２（コピーして増やせます） ▼▼ -->
 <div class="job-box">
   <p><strong>現場名：</strong>△△コンサート</p>
   <p><strong>内容：</strong>案内スタッフ</p>
   <p><strong>勤務地：</strong>横浜市西区</p>
   <p><strong>時間：</strong>12:00〜21:00</p>
 
-  <a class="apply-btn" href="apply.html">応募する</a>
+  <a class="apply-btn" href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sharing" target="_blank">応募する</a>
 </div>
-<!-- ▲▲ コピペして増やせる ▲▲ -->
+<!-- ▲▲ 求人２ ▲▲ -->
 
+<!-- ▼▼ ここからコピーして求人を増やせます ▼▼ -->
 
 </body>
 </html>
 
-<div class="job-box"> ～ </div>
