--- a/index.html
+++ b/index.html
@@ -33,22 +33,28 @@
   <p><strong>勤務地：</strong>東京都渋谷区</p>
   <p><strong>時間：</strong>9:00〜18:00</p>
 
-  <a class="apply-btn" href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sharing" target="_blank">応募する</a>
+  <!-- 応募ボタン（求人専用フォームURL） -->
+  <a class="apply-btn" href="https://docs.google.com/forms/d/e/フォームID_求人1/viewform" target="_blank">
+    応募する
+  </a>
 </div>
 <!-- ▲▲ 求人１ ▲▲ -->
 
-<!-- ▼▼ 求人２（コピーして増やせます） ▼▼ -->
+<!-- ▼▼ 求人２ ▼▼ -->
 <div class="job-box">
   <p><strong>現場名：</strong>△△コンサート</p>
   <p><strong>内容：</strong>案内スタッフ</p>
   <p><strong>勤務地：</strong>横浜市西区</p>
   <p><strong>時間：</strong>12:00〜21:00</p>
 
-  <a class="apply-btn" href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sharing" target="_blank">応募する</a>
+  <!-- 応募ボタン（求人専用フォームURL） -->
+  <a class="apply-btn" href="https://docs.google.com/forms/d/e/フォームID_求人2/viewform" target="_blank">
+    応募する
+  </a>
 </div>
 <!-- ▲▲ 求人２ ▲▲ -->
 
-<!-- ▼▼ ここからコピーして求人を増やせます ▼▼ -->
+<!-- ▼▼ 求人を追加する場合はこの部分をコピーしてフォームURLを変更 ▼▼ -->
 
 </body>
 </html>
