--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
   <p><strong>時間：</strong>9:00〜18:00</p>
 
   <!-- 応募ボタン（求人専用フォームURL） -->
-  <a class="apply-btn" href="https://docs.google.com/forms/d/e/フォームID_求人1/viewform" target="_blank">
-    応募する
+  <a class="apply-btn" 
+     href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform" 
+     target="_blank">
+     応募する
   </a>
 </div>
 <!-- ▲▲ 求人１ ▲▲ -->
@@ -48,13 +50,15 @@
   <p><strong>時間：</strong>12:00〜21:00</p>
 
   <!-- 応募ボタン（求人専用フォームURL） -->
-  <a class="apply-btn" href="https://docs.google.com/forms/d/e/フォームID_求人2/viewform" target="_blank">
-    応募する
+  <a class="apply-btn" 
+     href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform" 
+     target="_blank">
+     応募する
   </a>
 </div>
 <!-- ▲▲ 求人２ ▲▲ -->
 
-<!-- ▼▼ 求人を追加する場合はこの部分をコピーしてフォームURLを変更 ▼▼ -->
+<!-- ▼▼ 追加求人はこの部分をコピーしてフォームIDと内容を変更 ▼▼ -->
 
 </body>
 </html>
