--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- 応募ボタン（求人専用フォームURL） -->
   <a class="apply-btn" 
-     href="https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform" 
+     href="https://docs.google.com/forms/d/e/あなたがコピーした2つ目フォームID/viewform" 
      target="_blank">
      応募する
   </a>
