--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- 応募ボタン（求人専用フォームURL） -->
   <a class="apply-btn" 
-     href="https://docs.google.com/forms/d/e/ここに二つ目フォームIDを貼る/viewform" 
+     href="https://docs.google.com/forms/d/e/1FAIpQLSdYy2DXZQoaLSJofhe3NGoL7_K8MxlnN5SpHG-6ZcBfzxsQHg/viewform?usp=header" 
      target="_blank">
      応募する
   </a>
@@ -62,4 +62,3 @@
 
 </body>
 </html>
-
