--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="jobs-container"></div>
 
 <script>
-  // ここに2つのGASウェブアプリURLを入れる
+  // GASウェブアプリURLを2つ設定（現場Aと現場B）
   const urls = [
     'https://script.google.com/macros/s/AKfycbw_gmkDNPIbZcmwvMuHFrxgfHL7kcbIIXz3LmIAol23PoTovqeVYCR1OCF-wREzDa_NaA/exec',
     'https://script.google.com/macros/s/AKfycbz8FJp0ES3a4SpGzMhyFo5Agql2s0rvnXD7Q0mbk8hjhVjPS-57179ey3NXXlEq20n-/exec'
@@ -32,6 +32,10 @@
         Object.keys(data).forEach(jobId => {
           const job = data[jobId];
 
+          // 両現場とも募集人数1人に設定
+          const maxApplicants = 1;
+          const currentApplicants = job.currentApplicants;
+
           const div = document.createElement('div');
           div.className = 'job-box';
 
@@ -40,8 +44,8 @@
             <p><strong>内容：</strong>${job.content}</p>
             <p><strong>勤務地：</strong>${job.location}</p>
             <p><strong>時間：</strong>${job.time}</p>
-            <p class="status" id="${jobId}-status">${job.currentApplicants >= job.maxApplicants ? '募集終了' : '募集中'}</p>
-            <a id="${jobId}-apply" class="apply-btn" href="${job.formUrl}" target="_blank" ${job.currentApplicants >= job.maxApplicants ? 'style="display:none;"' : ''}>応募する</a>
+            <p class="status" id="${jobId}-status">${currentApplicants >= maxApplicants ? '募集終了' : '募集中'}</p>
+            <a id="${jobId}-apply" class="apply-btn" href="${job.formUrl}" target="_blank" ${currentApplicants >= maxApplicants ? 'style="display:none;"' : ''}>応募する</a>
           `;
 
           container.appendChild(div);
@@ -53,4 +57,3 @@
 
 </body>
 </html>
-
