--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   h2 { margin-bottom: 20px; }
   .job-box { border: 1px solid #ccc; padding: 15px; margin-bottom: 20px; border-radius: 5px; }
   .apply-btn { display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; }
-  .status { font-weight: bold; margin-top: 10px; }
+  .status { font-weight: bold; margin-top: 10px; color: green; }
 </style>
 </head>
 <body>
@@ -17,42 +17,50 @@
 <div id="jobs-container"></div>
 
 <script>
-  // GASウェブアプリURLを2つ設定（job1, job2）
-  const urls = [
-    'https://script.google.com/macros/s/AKfycbwzrH-MK6Bdo4DqpwlajS6tEpZ_7SiepvRe0has_xi9kSG-5WRNvk3UGaSVWDUo5QI/exec',
-    'https://script.google.com/macros/s/AKfycbwoc_ckZpePLbsOnqCFgnROBO0tc4JHSRLlnK0e1JmMBFzF19yF6bZmXjNXux2OXeLijw/exec'
+  // 現場情報（人数制限なし）
+  const jobs = [
+    {
+      name: "現場A",
+      content: "会場設営",
+      location: "東京都渋谷区",
+      time: "9:00〜18:00",
+      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link"
+    },
+    {
+      name: "現場B",
+      content: "搬入作業",
+      location: "東京都新宿区",
+      time: "10:00〜19:00",
+      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdYy2DXZQoaLSJofhe3NGoL7_K8MxlnN5SpHG-6ZcBfzxsQHg/viewform?usp=sf_link"
+    }
   ];
 
   const container = document.getElementById('jobs-container');
 
-  urls.forEach(url => {
-    fetch(url)
-      .then(res => res.json())
-      .then(data => {
-        Object.keys(data).forEach(jobId => {
-          const job = data[jobId];
+  // 募集一覧を描画
+  jobs.forEach(job => {
+    const div = document.createElement('div');
+    div.className = 'job-box';
 
-          const maxApplicants = 10; // 両現場1人募集
-          const currentApplicants = job.currentApplicants;
+    div.innerHTML = `
+      <p><strong>現場名：</strong>${job.name}</p>
+      <p><strong>内容：</strong>${job.content}</p>
+      <p><strong>勤務地：</strong>${job.location}</p>
+      <p><strong>時間：</strong>${job.time}</p>
+      <p class="status">募集中</p>
+      <button class="apply-btn">応募する</button>
+    `;
 
-          const div = document.createElement('div');
-          div.className = 'job-box';
+    // 応募ボタンでフォームを開く
+    const button = div.querySelector('button');
+    button.addEventListener('click', () => {
+      window.open(job.formUrl, '_blank');
+    });
 
-          div.innerHTML = `
-            <p><strong>現場名：</strong>${job.name}</p>
-            <p><strong>内容：</strong>${job.content}</p>
-            <p><strong>勤務地：</strong>${job.location}</p>
-            <p><strong>時間：</strong>${job.time}</p>
-            <p class="status" id="${jobId}-status">${currentApplicants >= maxApplicants ? '募集終了' : '募集中'}</p>
-            <a id="${jobId}-apply" class="apply-btn" href="${job.formUrl}" target="_blank" ${currentApplicants >= maxApplicants ? 'style="display:none;"' : ''}>応募する</a>
-          `;
-
-          container.appendChild(div);
-        });
-      })
-      .catch(err => console.error('JSON取得エラー:', err));
+    container.appendChild(div);
   });
 </script>
 
 </body>
 </html>
+
