--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>募集一覧（人数制限あり）</title>
+<title>募集一覧</title>
 <style>
   body { font-family: Arial, sans-serif; padding: 20px; }
   h2 { margin-bottom: 20px; }
   .job-box { border: 1px solid #ccc; padding: 15px; margin-bottom: 20px; border-radius: 5px; }
   .apply-btn { display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; }
-  .apply-btn:disabled { background-color: #aaa; cursor: not-allowed; }
-  .status { font-weight: bold; margin-top: 10px; }
 </style>
 </head>
 <body>
@@ -18,7 +16,7 @@
 <div id="jobs-container"></div>
 
 <script>
-  // 現場情報（人数制限あり）
+  // 現場情報（募集人数を表示）
   const jobs = [
     {
       name: "現場A",
@@ -26,8 +24,7 @@
       location: "東京都渋谷区",
       time: "9:00〜18:00",
       formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
-      maxApplicants: 2,  // 募集人数
-      currentApplicants: 0
+      totalSlots: 2  // 募集人数
     },
     {
       name: "現場B",
@@ -35,49 +32,36 @@
       location: "東京都新宿区",
       time: "10:00〜19:00",
       formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdYy2DXZQoaLSJofhe3NGoL7_K8MxlnN5SpHG-6ZcBfzxsQHg/viewform?usp=sf_link",
-      maxApplicants: 3,  // 募集人数
-      currentApplicants: 0
+      totalSlots: 3  // 募集人数
     }
   ];
 
   const container = document.getElementById('jobs-container');
 
-  function renderJobs() {
-    container.innerHTML = '';
-    jobs.forEach(job => {
-      const div = document.createElement('div');
-      div.className = 'job-box';
+  // 募集一覧を描画
+  jobs.forEach(job => {
+    const div = document.createElement('div');
+    div.className = 'job-box';
 
-      const isFull = job.currentApplicants >= job.maxApplicants;
+    div.innerHTML = `
+      <p><strong>現場名：</strong>${job.name}</p>
+      <p><strong>内容：</strong>${job.content}</p>
+      <p><strong>勤務地：</strong>${job.location}</p>
+      <p><strong>時間：</strong>${job.time}</p>
+      <p><strong>募集人数：</strong>${job.totalSlots}名</p>
+      <button class="apply-btn">応募する</button>
+    `;
 
-      div.innerHTML = `
-        <p><strong>現場名：</strong>${job.name}</p>
-        <p><strong>内容：</strong>${job.content}</p>
-        <p><strong>勤務地：</strong>${job.location}</p>
-        <p><strong>時間：</strong>${job.time}</p>
-        <p class="status">${isFull ? '募集終了' : '募集中'}</p>
-        <button class="apply-btn" ${isFull ? 'disabled' : ''}>応募する</button>
-      `;
-
-      const button = div.querySelector('button');
-      if (!isFull) {
-        button.addEventListener('click', () => {
-          // フォームを別タブで開く
-          window.open(job.formUrl, '_blank');
-
-          // 応募人数をカウント
-          job.currentApplicants++;
-          renderJobs(); // 再描画して「募集終了」に更新
-        });
-      }
-
-      container.appendChild(div);
+    const button = div.querySelector('button');
+    button.addEventListener('click', () => {
+      // フォームを別タブで開く
+      window.open(job.formUrl, '_blank');
     });
-  }
 
-  // 初回描画
-  renderJobs();
+    container.appendChild(div);
+  });
 </script>
 
 </body>
 </html>
+
