--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
       totalSlots: 2  // 募集人数
     },
     {
+      name: "現場A",
+      content: "会場設営",
+      location: "東京都渋谷区",
+      time: "9:00〜18:00",
+      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
+      totalSlots: 2  // 募集人数
+    },
+    {
       name: "現場B",
       content: "搬入作業",
       location: "東京都新宿区",
