--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       content: "会場設営",
       location: "東京都渋谷区",
       time: "9:00〜18:00",
-      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
+      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSfnITtrtXbTZ_tCxeSU_N01DEEql4GdxBkXRzrKDzHBhKokMA/viewform?usp=publish-editor,
       totalSlots: 2  // 募集人数
     },
     {
