--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   h2 { margin-bottom: 20px; }
   .job-box { border: 1px solid #ccc; padding: 15px; margin-bottom: 20px; border-radius: 5px; }
   .apply-btn { display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; }
+  .apply-btn:disabled { background-color: #aaa; cursor: not-allowed; }
+  .status { font-weight: bold; margin-top: 10px; }
 </style>
 </head>
 <body>
@@ -16,60 +18,74 @@
 <div id="jobs-container"></div>
 
 <script>
-  // 現場情報（募集人数を表示）
-  const jobs = [
-    {
-      name: "現場A",
-      content: "会場設営",
-      location: "東京都渋谷区",
-      time: "9:00〜18:00",
-      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
-      totalSlots: 2  // 募集人数
-    },
-    {
-      name: "現場A",
-      content: "会場設営",
-      location: "東京都",
-      time: "12:00〜18:00",
-      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
-      totalSlots: 2222  // 募集人数
-    },
-    {
-      name: "現場B",
-      content: "搬入作業",
-      location: "東京都新宿区",
-      time: "10:00〜19:00",
-      formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdYy2DXZQoaLSJofhe3NGoL7_K8MxlnN5SpHG-6ZcBfzxsQHg/viewform?usp=sf_link",
-      totalSlots: 3  // 募集人数
-    }
-  ];
+const container = document.getElementById('jobs-container');
 
-  const container = document.getElementById('jobs-container');
+// ここに求人情報を追加
+const jobs = [
+  {
+    name: "現場A",
+    content: "会場設営",
+    location: "東京都渋谷区",
+    time: "9:00〜18:00",
+    formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
+    totalSlots: 2,
+    currentApplicants: 0
+  },
+  {
+    name: "現場A",
+    content: "会場設営",
+    location: "東京都渋谷区",
+    time: "9:00〜18:00",
+    formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSfnITtrtXbTZ_tCxeSU_N01DEEql4GdxBkXRzrKDzHBhKokMA/viewform?usp=header ,
+    totalSlots: 2,
+    currentApplicants: 0
+  },
+  {
+    name: "現場B",
+    content: "荷物運搬",
+    location: "東京都港区",
+    time: "12:00〜18:00",
+    formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSdYy2DXZQoaLSJofhe3NGoL7_K8MxlnN5SpHG-6ZcBfzxsQHg/viewform?usp=sf_link",
+    totalSlots: 1,
+    currentApplicants: 0
+  }
+  // ここに追加求人をコピー＆ペースト
+];
 
-  // 募集一覧を描画
-  jobs.forEach(job => {
-    const div = document.createElement('div');
-    div.className = 'job-box';
+jobs.forEach(job => {
+  const div = document.createElement('div');
+  div.className = 'job-box';
 
-    div.innerHTML = `
-      <p><strong>現場名：</strong>${job.name}</p>
-      <p><strong>内容：</strong>${job.content}</p>
-      <p><strong>勤務地：</strong>${job.location}</p>
-      <p><strong>時間：</strong>${job.time}</p>
-      <p><strong>募集人数：</strong>${job.totalSlots}名</p>
-      <button class="apply-btn">応募する</button>
-    `;
+  const isFull = job.currentApplicants >= job.totalSlots;
 
-    const button = div.querySelector('button');
+  div.innerHTML = `
+    <p><strong>現場名：</strong>${job.name}</p>
+    <p><strong>内容：</strong>${job.content}</p>
+    <p><strong>勤務地：</strong>${job.location}</p>
+    <p><strong>時間：</strong>${job.time}</p>
+    <p><strong>募集人数：</strong>${job.totalSlots} 名</p>
+    <p><strong>応募人数：</strong>${job.currentApplicants} 名</p>
+    <p class="status">${isFull ? '募集終了' : '募集中'}</p>
+    <button class="apply-btn" ${isFull ? 'disabled' : ''}>応募する</button>
+  `;
+
+  const button = div.querySelector('button');
+  if (!isFull) {
     button.addEventListener('click', () => {
-      // フォームを別タブで開く
       window.open(job.formUrl, '_blank');
+      // 応募人数をカウントアップ（簡易版）
+      job.currentApplicants++;
+      div.querySelector('p:nth-of-type(6)').textContent = `応募人数：${job.currentApplicants} 名`;
+      if (job.currentApplicants >= job.totalSlots) {
+        div.querySelector('.status').textContent = '募集終了';
+        button.disabled = true;
+      }
     });
+  }
 
-    container.appendChild(div);
-  });
+  container.appendChild(div);
+});
 </script>
 
 </body>
 </html>
-
