--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@ const jobs = [
     currentApplicants: 0
   },
   {
+    name: "現場C",
+    content: "カメアシ",
+    location: "渋谷区",
+    time: "9:00〜18:00",
+    formUrl: "https://docs.google.com/forms/d/e/1FAIpQLSfnITtrtXbTZ_tCxeSU_N01DEEql4GdxBkXRzrKDzHBhKokMA/viewform?usp=header",
+    totalSlots: 2222,
+    currentApplicants: 0
+  },
+  {
     name: "現場B",
     content: "荷物運搬",
     location: "東京都港区",
