--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ const jobs = [
     content: "会場設営",
     location: "東京都渋谷区",
     time: "9:00〜18:00",
-    formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=sf_link",
+    formUrl: "https://docs.google.com/forms/d/e/1FAIpQLScIfONUgGlqo_qP-vTs3XegMmwXbzGI_dk_WKOoYf5S5ibtUQ/viewform?usp=header",
     totalSlots: 2
   },
   {
